--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   --lh-paragraph: 1.5625rem;
 
   --fs-paragraph-s: 0.75rem;
-  --ls-paragraph-s: .0625rem;
+  --ls-paragraph-s: 0.0625rem;
 }
 
 * {
@@ -74,8 +74,8 @@ p {
 .card {
   display: flex;
   background-color: var(--dark-desaturated-blue-card-background);
+  border-radius: 0.5rem;
   width: 69.375rem;
-  border-radius: .5rem;
 }
 
 .description-container {
@@ -83,7 +83,7 @@ p {
   min-width: 570px;
 }
 
-.card-description h1{
+.card-description h1 {
   margin-block-end: 1.5625rem;
 }
 
@@ -96,19 +96,19 @@ span.highlighted-header {
   color: var(--soft-violet-accent);
 }
 
+.img-background {
+  min-width: 33.75rem;
+  background-color: var(--soft-violet-accent);
+  border-radius: 0 0.5rem 0.5rem 0;
+}
+
 .img-container {
   width: 100%;
   height: 100%;
   background: url("./public/images/image-header-desktop.jpg") no-repeat;
   background-size: cover;
-  opacity: .75;
+  opacity: 0.75;
   mix-blend-mode: multiply;
-}
-
-.img-background{
-  min-width: 33.75rem;
-  background-color: var(--soft-violet-accent);
-  border-radius: 0 .5rem .5rem 0;
 }
 
 .stat-container {
@@ -118,10 +118,60 @@ span.highlighted-header {
 }
 
 .stat-description {
-  margin-top: .125rem;
+  margin-top: 0.125rem;
   letter-spacing: var(--ls-paragraph-s);
   font-size: var(--fs-paragraph-s);
   font-family: var(--ff-secondary);
   text-transform: uppercase;
   color: var(--slightly-transparent-white-stat-headings);
+}
+
+
+@media (max-width: 50rem) {
+  :root {
+    --fs-header-l: var(--fs-header-l-m);
+    --lh-header: var(--lh-header-l-m);
+  }
+  .card {
+    text-align: center;
+    flex-flow: column-reverse;
+    margin: 5.5rem 1.5rem;
+    width: auto;
+  }
+  .description-container {
+    padding: 2.5rem 2rem 2rem;
+    min-width: auto;
+  }
+  .img-background {
+    min-width: 100%;
+    border-radius: 0.5rem 0.5rem 0 0;
+  }
+
+  .img-container {
+    width: 100%;
+    min-height: 15rem;
+    background: url("./public/images/image-header-mobile.jpg") no-repeat;
+    background-size: cover;
+    opacity: 0.75;
+    mix-blend-mode: multiply;
+  }
+
+  .card-description h1 {
+    margin-block-end: 1rem;
+  }
+
+  p.card-description {
+    margin-block: 1rem 2.5rem;
+    margin-inline-end: 0;
+  }
+
+  .stat-container {
+    flex-direction: column;
+    align-items: center;
+    margin-inline-end: 0;
+  }
+
+  .stat-block:not(:first-child) {
+    margin-block-start: 1.5rem;
+  }
 }
